[IQSLDSH-188] - fixed. No horizontal scrolling available anymore

--- a/public/modules/slideshows/css/device-interaction.scss
+++ b/public/modules/slideshows/css/device-interaction.scss
@@ -128,6 +128,7 @@
     @media (orientation: landscape) {
         display: none;
     }
+    overflow-x: hidden;
 }
 
 .iqss-device-interaction-content-slide {
